# easy-rtc

./: .gitignore
EasyRTC/: CMakeLists.txt  main.cpp  main.qml
EasyRTC/plugins/: CMakeLists.txt
EasyRTC/plugins/easyrtc/: CMakeLists.txt  EasyCall.qml  EasyRTC.qml  plugin.qmltypes  qmldir
EasyRTC/plugins/rtc/plugin/easyrtc/: CMakeLists.txt  EasyCall.qml  EasyMeeting.qml  easyrtc_engine.cpp  easyrtc_engine.h  easyrtc_plugin.cpp  easyrtc_plugin.h  plugin.qmltypes  plugin.qrc  qmldir
